<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/create_contest_map_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.BeGreen">

    <TextView
        android:id="@+id/create_contest_map_title"
...
        android:id="@+id/create_contest_map_cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_contest_map_dialog_cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_contest_map"
        app:layout_constraintEnd_toStartOf="@id/create_contest_map_approve_button"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/create_contest_map_approve_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
